kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-k8s
spec:
  selector:
    matchLabels:
      app: nestjs-k8s
  replicas: 2
  template:
    metadata:
      labels:
        app: nestjs-k8s
    spec:
      containers:
        - name: nestjs-k8s
          image: mkozul10/nestjs-k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
